--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.2",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1"
   }
